--- a/base/accounts/templates/profile/user_profile.html
+++ b/base/accounts/templates/profile/user_profile.html
@@ -12,6 +12,7 @@
 </div>
 
 
+{% if applications %}
 <div class="container">
   {% for application in applications %}
   
@@ -21,9 +22,9 @@
       <div class="row g-0">
         <div class="col-md-4">
           {% if application.offer.company.image %}
-          <img src="http://127.0.0.1:8000/media/{{application.offer.company.image}}" class="img-fluid rounded-start" alt={{application.offer.company.name}}>
+          <img style="width: 250px; height: 120px;" class="mx-auto d-block pt-3 pb-3" src="http://127.0.0.1:8000/media/{{application.offer.company.image}}"  alt={{application.offer.company.name}}>
           {% else %}
-          <img src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="img-fluid rounded-start" alt="no image" />
+          <img style="width: 250px; height: 120px;" class="mx-auto d-block pt-3 pb-3" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" alt="no image" />
           {% endif %}
         </div>
         <div class="col-md-8">
@@ -33,11 +34,11 @@
             <h5 class="card-title" style="color: green; font-weight: 800">{{application.offer.salary}}</h5>
           </div>  
             <div class="d-flex justify-content-between">
-              <a href="company/{{application.offer.company.id}}"> <p class="card-text"><small class="text-body-secondary">{{application.offer.company}}</small></p> </a>
-              <p class="card-text"><small class="text-body-secondary">{{application.offer.date_created}}</small></p>
-              <p class="card-text"><small class="text-body-secondary">{{application.offer.return_localization}}</small></p>
+              <a style="margin-right: 10px" href="company/{{application.offer.company.id}}"> <p class="card-text"><small class="text-body-secondary">{{application.offer.company}}</small></p> </a>
+              <p style="margin-right: 10px" class="card-text"><small class="text-body-secondary">{{application.offer.date_created}}</small></p>
+              <p style="margin-right: 10px" class="card-text"><small class="text-body-secondary">{{application.offer.return_localization}}</small></p>
               {% if application.offer.return_requirements %}
-                  <p class="card-text"><smaill class="text-body-secondary">{{application.offer.return_requirements}}</small></p>
+                  <p style="margin-right: 10px" class="card-text"><smaill class="text-body-secondary">{{application.offer.return_requirements}}</small></p>
               {% endif %}
             </div>
           </div>
@@ -82,7 +83,10 @@
 
   {% endfor %}
 </div>
-
-
+{% else %}
+<div class="container">
+  <h2>You don't have any applications yet</h2>
+</div>
+{% endif %}
 
 {% endblock %}
