--- a/base/dashboard/templates/company_dashboard.html
+++ b/base/dashboard/templates/company_dashboard.html
@@ -22,11 +22,9 @@
                 </div>
                   <div class="d-flex justify-content-between">
                     <p class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
-                    <a class="card-text" href="{% url 'dashboard:applications' object.id %}">Candidates</a>
-                    <a class="card-text" href="{% url 'dashboard:edit-offer' object.id %}">Edit</a>
-                    <a class="card-text" href="{% url 'dashboard:generate-csv' object.id %}">
-                        CSV
-                    </a>
+                    <a style="margin-right:10px;" class="card-text" href="{% url 'dashboard:applications' object.id %}">Candidates</a>
+                    <a style="margin-right:10px;" class="card-text" href="{% url 'dashboard:edit-offer' object.id %}">Edit</a>
+                    <a style="margin-right:10px;" class="card-text" href="{% url 'dashboard:generate-csv' object.id %}">CSV</a>
                     
                       <form method="POST" action="{% url 'dashboard:delete-offer' object.id %}">
                           {% csrf_token %}
