--- a/base/offers/templates/companies_list.html
+++ b/base/offers/templates/companies_list.html
@@ -11,16 +11,16 @@
             <div class="col-md-4">
               {% if object.image %}
               <a href="{% url 'offers:company-detail' object.id %}">
-              <img style="width: 250px; height: 120px;" class="mx-auto d-block pt-3 pb-3" src="http://127.0.0.1:8000/media/{{object.image}}" class="img-fluid rounded-start" alt={{object.name}}></a>
+              <img style="width: 250px; height: 120px;" class="mx-auto d-block pt-3 pb-3" src="http://127.0.0.1:8000/media/{{object.image}}"  alt={{object.name}}></a>
               {% else %}
               <a href="{% url 'offers:company-detail' object.id %}">
-              <img style="width: 320px; height: 300px;" class="mx-auto d-block pt-3 pb-3" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="img-fluid rounded-start" alt="no image" /></a>
+              <img style="width: 320px; height: 300px;" class="mx-auto d-block pt-3 pb-3" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png"  alt="no image" /></a>
               {% endif %}
             </div>
             <div class="col-md-8">
               <div class="card-body">
               <div class="d-flex justify-content-between">    
-                <a style="text-decoration: none; color: black;" href="/offer/{{object.id}}"><h2 class="card-title">{{object.username}}</h2></a>
+                <a style="text-decoration: none; color: black;" href="{% url 'offers:company-detail' object.id %}"><h2 class="card-title">{{object.username}}</h2></a>
               </div>  
                 <div class="d-flex justify-content-between">
                   <p class="card-text"><small class="text-body-secondary">{{object.description}}</small></p>
