--- a/base/offers/templates/company_detail.html
+++ b/base/offers/templates/company_detail.html
@@ -10,7 +10,13 @@
   <a href="#">
       <h6>Company rate {{avg_rating}}/5</h6>
   </a>
+  {% if object.image %}
   <img src="http://127.0.0.1:8000/media/{{object.image}}" class="img-fluid rounded-start" alt={{object.name}}>
+  {% else %}
+  <img  class="img-fluid rounded-start" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png"  alt="no image" />
+  {% endif %}
+
+  {% if object.description %}
   <div class="accordion" id="accordionExample">
       <div class="accordion-item">
         <h2 class="accordion-header">
@@ -18,13 +24,19 @@
             Description
           </button>
         </h2>
+
         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+
           <div class="accordion-body">
               {{object.description}}
           </div>
+          {% else %}
+
         </div>
+
       </div>  
-  </div>    
+  </div>
+  {% endif %}
 </div>
 
 {% if object_list %}
@@ -35,9 +47,9 @@
             <div class="row g-0">
               <div class="col-md-4">
                 {% if object.company.image %}
-                <img src="http://127.0.0.1:8000/media/{{object.company.image}}" class="img-fluid rounded-start" alt={{pbject.company.name}}>
+                <img style="width: 250px; height: 120px;" src="http://127.0.0.1:8000/media/{{object.company.image}}" class="mx-auto d-block pt-3 pb-3" alt={{object.company.name}}>
                 {% else %}
-                <img src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="img-fluid rounded-start" alt="no image" />
+                <img style="width: 250px; height: 120px;" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="mx-auto d-block pt-3 pb-3" alt="no image" />
                 {% endif %}
               </div>
               <div class="col-md-8">
@@ -47,11 +59,11 @@
                   <h5 class="card-title" style="color: green; font-weight: 800">{{object.salary}}</h5>
                 </div>  
                   <div class="d-flex justify-content-between">
-                    <p class="card-text"><small class="text-body-secondary">{{object.company}}</small></p>
-                    <p class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
-                    <p class="card-text"><small class="text-body-secondary">{{object.return_localization}}</small></p>
+                    <p style="margin-right:10px" class="card-text"><small class="text-body-secondary">{{object.company}}</small></p>
+                    <p style="margin-right:10px" class="card-text"><small class="text-body-secondary">{{object.date_created}}</small></p>
+                    <p style="margin-right:10px" class="card-text"><small class="text-body-secondary">{{object.return_localization}}</small></p>
                     {% if object.return_requirements %}
-                        <p class="card-text"><smaill class="text-body-secondary">{{object.return_requirements}}</small></p>
+                        <p style="margin-right:10px" class="card-text"><small class="text-body-secondary">{{object.return_requirements}}</small></p>
                     {% endif %}
                   </div>
                 </div>
