--- a/base/offers/templates/offer_detail.html
+++ b/base/offers/templates/offer_detail.html
@@ -4,30 +4,10 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container mb-5">
     <a style="text-decoration: none; color: black;" href="{% url 'offers:company-detail' object.company.id %}">
         <h2 style="font-size: 40px; font-weight: 600">{{object.company.username}}</h2>
     </a>
-    <a href="#">
-        <h6>Company rate {{avg_rating}}/5</h6>
-    </a>
-    <a href="{% url 'offers:company-detail' object.company.id %}">
-    <img src="http://127.0.0.1:8000/media/{{object.company.image}}" class="img-fluid rounded-start" alt={{object.company.name}}>
-    </a>
-    <div class="accordion" id="accordionExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Description
-            </button>
-          </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-                {{object.company.description}}
-            </div>
-          </div>
-        </div>  
-    </div>    
 </div>
 
 
