--- a/base/offers/templates/companies_list.html
+++ b/base/offers/templates/companies_list.html
@@ -21,10 +21,13 @@
               <div class="card-body">
               <div class="d-flex justify-content-between">    
                 <a style="text-decoration: none; color: black;" href="{% url 'offers:company-detail' object.id %}"><h2 class="card-title">{{object.username}}</h2></a>
-              </div>  
+              </div>
+                {% if object.description %}
                 <div class="d-flex justify-content-between">
                   <p class="card-text"><small class="text-body-secondary">{{object.description}}</small></p>
                 </div>
+                {% else %}
+                {% endif %}
               </div>
             </div>
           </div>
