--- a/base/study/templates/study_home_page_list.html
+++ b/base/study/templates/study_home_page_list.html
@@ -34,9 +34,9 @@
 <div class="card" >
     <div class="card-body">
         <h5 style="font-weight: bold" class="card-title">{{object.name}}</h5>
-        <h6 class="card-subtitle mb-2 text-body-decondary">{{object.date_created}}</h6>
+        <h6 class="card-subtitle mb-2 text-body-secondary">{{object.date_created}}</h6>
         <p class="card-text">{{object.description}}</p>
-        <a href={{objects.url}} class="card-link">Check here</a>
+        <a href="{{object.url}}" class="card-link">Check here</a>
     </div>
 </div>
 </div>
