Bugfix | Adding margines, changing the image size, containers height and other details to make website prettier

--- a/base/accounts/templates/profile/user_profile.html
+++ b/base/accounts/templates/profile/user_profile.html
@@ -84,8 +84,8 @@
   {% endfor %}
 </div>
 {% else %}
-<div class="container">
-  <h2>You don't have any applications yet</h2>
+<div class="container" style="height: 700px">
+  <h2 class="text-center">You don't have any applications yet</h2>
 </div>
 {% endif %}
 
