--- a/base/dashboard/templates/offer_update.html
+++ b/base/dashboard/templates/offer_update.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <div class="p-5 mt-5 text-center">
-  <h1 class="mb-5">Eddit offer</h1>
+  <h1 class="mb-5">Edit offer</h1>
 </div>
 
 <div class="container">
