--- a/base/accounts/templates/auth/change_password.html
+++ b/base/accounts/templates/auth/change_password.html
@@ -9,7 +9,7 @@
     <h1 class="mb-5">Change password</h1>
 </div>
 
-<div class="container">
+<div class="container mt-5 mb-5" style="height: 600px">
     <form method="post">
         {% csrf_token %}
         {{form|crispy}}
