--- a/base/base/templates/footer.html
+++ b/base/base/templates/footer.html
@@ -30,10 +30,10 @@
               <a href="/" class="text-reset">Jobs offers</a>
             </p>
             <p>
-              <a href="/companies" class="text-reset">Companies</a>
+              <a href="{% url 'offers:companies-list' %}" class="text-reset">Companies</a>
             </p>
             <p>
-              <a href="/" class="text-reset">Knowledge Base</a>
+              <a href="{% url 'study:study_list' %}" class="text-reset">Knowledge Base</a>
             </p>
           </div>
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
