--- a/base/offers/templates/home_page.html
+++ b/base/offers/templates/home_page.html
@@ -4,8 +4,6 @@
 
 {% block content %}
 
-
-
   
   <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
     <div class="offcanvas-header">
@@ -52,10 +50,10 @@
           <div class="col-md-4">
             {% if object.company.image %}
             <a href="/offer/{{object.id}}">
-            <img style="width: 250px; height: 120px;" class="mx-auto d-block pt-3 pb-3" src="http://127.0.0.1:8000/media/{{object.company.image}}"  alt={{object.company.name}}></a>
+            <img style="width: 250px; height: 120px; object-fit: contain;" class="mx-auto d-block pt-3 pb-3" src="http://127.0.0.1:8000/media/{{object.company.image}}"  alt={{object.company.name}}></a>
             {% else %}
             <a href="/offer/{{object.id}}">
-            <img style="width: 320px; height: 300px;" class="mx-auto d-block pt-3 pb-3" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" class="img-fluid rounded-start" alt="no image" /></a>
+            <img style="width: 250px; height: 120px; object-fit: contain" class="mx-auto d-block pt-3 pb-3" src="https://www.allianceplast.com/wp-content/uploads/no-image-1024x1024.png" alt="no image" /></a>
             {% endif %}
           </div>
           <div class="col-md-8">
@@ -79,8 +77,9 @@
 {% endfor %}
 </div>
 {% else %}
-<div class="text-center pt-5 pb-5">
-  <h1>There is no offers&#128531;</h1>
+
+<div class="container" style="height: 600px">
+    <h2 class="text-center">There is no offers &#128531;</h2>
 </div>
 {% endif %}
 
